--- a/css/grid.css
+++ b/css/grid.css
@@ -25,7 +25,7 @@
     body {
         background: rgba(0, 0, 0, 0.408);
     }
-    
+   
     .row>* {
         flex-shrink: 0;
         width: 100%;
@@ -57,6 +57,9 @@
 @media only screen and (min-width: 600px) {
     body {
         background: rgba(255, 255, 0, 0.505);
+    }
+    .app-list__left-item-image {
+        width : 100%;
     }
     .col-nav {
         display: none;
@@ -107,6 +110,10 @@
   .col-12 {width: 100%;}
   .app-demo__content {
     grid-template-columns:  auto auto auto;
+}
+.app-list__left-item-image {
+    flex: 0 0 200px;
+   
 }
 }
 
